<resources>
    <string name="app_name">Check-In</string>
    <string name="SubmitButtonString">Submit</string>
    <string name="PasswordConfirmationTextViewString">Confirmation:</string>
    <string name="PasswordTextViewString">Password:</string>
    <string name="EmailTextViewString">Email:</string>
    <string name="NameTextViewString">Name:</string>
    <string name="SignUpTextViewString">Sign Up</string>
    <string name="GenderTextViewString">Gender:</string>
    <string name="MaleRadioBoxString">Male</string>
    <string name="FemaleRadioBoxString">Female</string>
    <string name="action_settings">settings</string>
</resources>
